# faster-gepa

./: .gitignore  README.md  README_multi_llm.md  aime_dataset.py  example_usage.py  gepa_compatible_signatures.py  gepa_test.ipynb  hotpotqa_multi_component.ipynb  judge_signature.py  main.py  merger_signature.py  multi_component.ipynb  multi_llm_proposer.py  multi_modal_example.ipynb  multi_modal_instruction_proposer.py  privacy.ipynb  pyproject.toml
